@@ -279,12 +279,19 @@ module MongoidTest
       @original_stderr, $stderr = $stderr, StringIO.new
       
       @model = new_model
-      
-      @machine = StateMachine::Machine.new(@model)
-      @machine.state :state
     end
     
-    def test_should_output_warning
+    def test_should_output_warning_with_same_machine_name
+      @machine = StateMachine::Machine.new(@model)
+      @machine.state :state
+      
+      assert_match /^Instance method "state\?" is already defined in .*, use generic helper instead\.\n$/, $stderr.string
+    end
+    
+    def test_should_output_warning_with_same_machine_attribute
+      @machine = StateMachine::Machine.new(@model, :public_state, :attribute => :state)
+      @machine.state :state
+      
       assert_match /^Instance method "state\?" is already defined in .*, use generic helper instead\.\n$/, $stderr.string
     end
     
@@ -420,6 +427,25 @@ module MongoidTest
       
       @record.vehicle_status = 'parked'
       assert @record.status?(:parked)
+    end
+  end
+  
+  class MachineWithCustomAttributeTest < BaseTestCase
+    def setup
+      require 'stringio'
+      @original_stderr, $stderr = $stderr, StringIO.new
+      
+      @model = new_model
+      @machine = StateMachine::Machine.new(@model, :public_state, :attribute => :state)
+      @record = @model.new
+    end
+    
+    def test_should_not_delegate_attribute_predicate_with_different_attribute
+      assert_raise(ArgumentError) { @record.public_state? }
+    end
+    
+    def teardown
+      $stderr = @original_stderr
     end
   end
   
