@@ -1,5 +1,6 @@
 == master
 
+* Fix ActiveRecord machine state predicates incorrectly calling superclass implementation when using targeted attributes
 * Fix error when defining states with the same name as the state's machine in ActiveRecord, MongoMapper, and Mongoid integrations
 * Fix machine state predicate not calling superclass implementation if defined after machine definition
 * Generate warnings when defining a helper method more than once
